# textify-lite

./: .gitignore  LICENSE  README.md  pyproject.toml
src/textify/: editor.py  main.py  ocr.py  screenshot.py  utils.py
